js/js.translator/testData/incremental/invalidation/valueClassBridgeShapeChange/main/m.0.kt
fun box(stepId: Int, isWasm: Boolean): String {
    val actual = readToken(makeToken(41))
    return if (actual == 41) "OK" else "Fail step0: $actual"
}
